@@ -3173,8 +3173,9 @@ ACE_OS::thr_create (ACE_THR_FUNC func,
       if (ACE_BIT_ENABLED (flags, THR_SCOPE_SYSTEM)
           || ACE_BIT_ENABLED (flags, THR_SCOPE_PROCESS))
         {
-#         if defined (ACE_CONFIG_LINUX_H)
+#         if defined (ACE_CONFIG_LINUX_H) || defined (HPUX)
           // LinuxThreads do not have support for PTHREAD_SCOPE_PROCESS.
+          // Neither does HPUX (up to HP-UX 11.00, as far as I know).
           int scope = PTHREAD_SCOPE_SYSTEM;
 #         else /* ACE_CONFIG_LINUX_H */
           int scope = PTHREAD_SCOPE_PROCESS;
